--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Тел: 069842372
-      <br>E-mail: alexeyc3991@gmail.com</br>
+      Тел: nomer
+      <br>E-mail: kakoito@gmail.com</br>
     </div>
     </footer>
   </body>
